--- a/package.json
+++ b/package.json
@@ -1,83 +1,130 @@
 {
-  "name": "jugglingdb",
-  "description": "ORM for every database: redis, mysql, neo4j, mongodb, couchdb, postgres, sqlite",
-  "version": "1.0.2",
-  "author": "Anatoliy Chakkaev <rpm1602@gmail.com>",
-  "contributors": [
-    {
-      "name": "Anatoliy Chakkaev",
-      "email": "rpm1602@gmail.com"
+    "name": "jugglingdb",
+    "description": "ORM for every database: redis, mysql, neo4j, mongodb, couchdb, postgres, sqlite",
+    "version": "1.0.2",
+    "author": "Anatoliy Chakkaev <rpm1602@gmail.com>",
+    "contributors": [
+        {
+            "name": "Anatoliy Chakkaev",
+            "email": "rpm1602@gmail.com"
+        },
+        {
+            "name": "Julien Guimont",
+            "email": "julien.guimont@gmail.com"
+        },
+        {
+            "name": "Joseph Junker",
+            "email": "joseph.jnk@gmail.com"
+        },
+        {
+            "name": "Henri Bergius",
+            "email": "henri.bergius@iki.fi"
+        },
+        {
+            "name": "redvulps",
+            "email": "fabopereira@gmail.com"
+        },
+        {
+            "name": "Felipe Sateler",
+            "email": "fsateler@gmail.com"
+        },
+        {
+            "name": "Amir M. Mahmoudi",
+            "email": "a@geeknux.com"
+        },
+        {
+            "name": "Justinas Stankevičius",
+            "email": "justinas@justinas.me"
+        },
+        {
+            "name": "Rick O'Toole",
+            "email": "patrick.n.otoole@gmail.com"
+        },
+        {
+            "name": "Nicholas Westlake",
+            "email": "nicholasredlin@gmail.com"
+        }
+    ],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/1602/jugglingdb"
     },
-    {
-      "name": "Julien Guimont",
-      "email": "julien.guimont@gmail.com"
+    "main": "index.js",
+    "scripts": {
+        "test": "make test",
+        "prepublish": "make build",
+        "compile-indexjs": "babel index.js -o index.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-libsqljs": "babel lib\\sql.js -o lib\\sql.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-liblistjs": "babel lib\\list.js -o lib\\list.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-libhooksjs": "babel lib\\hooks.js -o lib\\hooks.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-libjutiljs": "babel lib\\jutil.js -o lib\\jutil.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-libmodeljs": "babel lib\\model.js -o lib\\model.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-libscopejs": "babel lib\\scope.js -o lib\\scope.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-libutilsjs": "babel lib\\utils.js -o lib\\utils.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-testinitjs": "babel test\\init.js -o test\\init.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-libschemajs": "babel lib\\schema.js -o lib\\schema.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-libincludejs": "babel lib\\include.js -o lib\\include.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-librailwayjs": "babel lib\\railway.js -o lib\\railway.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-librelationsjs": "babel lib\\relations.js -o lib\\relations.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-testi18ntestjs": "babel test\\i18n.test.js -o test\\i18n.test.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-testjsontestjs": "babel test\\json.test.js -o test\\json.test.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-testlisttestjs": "babel test\\list.test.js -o test\\list.test.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-libvalidationsjs": "babel lib\\validations.js -o lib\\validations.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-testhookstestjs": "babel test\\hooks.test.js -o test\\hooks.test.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-testmodeltestjs": "babel test\\model.test.js -o test\\model.test.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-testscopetestjs": "babel test\\scope.test.js -o test\\scope.test.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-testcommon_testjs": "babel test\\common_test.js -o test\\common_test.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-testschematestjs": "babel test\\schema.test.js -o test\\schema.test.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-testspec_helperjs": "babel test\\spec_helper.js -o test\\spec_helper.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-libadaptershttpjs": "babel lib\\adapters\\http.js -o lib\\adapters\\http.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-libadaptersriakjs": "babel lib\\adapters\\riak.js -o lib\\adapters\\riak.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-testcommonbatchjs": "babel test\\common.batch.js -o test\\common.batch.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-testincludetestjs": "babel test\\include.test.js -o test\\include.test.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-libadaptersneo4jjs": "babel lib\\adapters\\neo4j.js -o lib\\adapters\\neo4j.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-testdatatypetestjs": "babel test\\datatype.test.js -o test\\datatype.test.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-testdefaultstestjs": "babel test\\defaults.test.js -o test\\defaults.test.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-libadapterscradlejs": "babel lib\\adapters\\cradle.js -o lib\\adapters\\cradle.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-libadaptersmemoryjs": "babel lib\\adapters\\memory.js -o lib\\adapters\\memory.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-testrelationstestjs": "babel test\\relations.test.js -o test\\relations.test.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-testjugglingdbtestjs": "babel test\\jugglingdb.test.js -o test\\jugglingdb.test.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-testvalidationstestjs": "babel test\\validations.test.js -o test\\validations.test.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-testmanipulationtestjs": "babel test\\manipulation.test.js -o test\\manipulation.test.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-testbasicqueryingtestjs": "babel test\\basic-querying.test.js -o test\\basic-querying.test.js --require babel-polyfill --presets es2015-without-strict",
+        "compile-1_script": "npm run compile-indexjs && npm run compile-libsqljs && npm run compile-liblistjs && npm run compile-libhooksjs && npm run compile-libjutiljs && npm run compile-libmodeljs && npm run compile-libscopejs && npm run compile-libutilsjs && npm run compile-testinitjs && npm run compile-libschemajs && npm run compile-libincludejs && npm run compile-librailwayjs && npm run compile-librelationsjs && npm run compile-testi18ntestjs && npm run compile-testjsontestjs && npm run compile-testlisttestjs && npm run compile-libvalidationsjs && npm run compile-testhookstestjs && npm run compile-testmodeltestjs && npm run compile-testscopetestjs",
+        "compile-2_script": "npm run compile-testhookstestjs && npm run compile-testmodeltestjs && npm run compile-testscopetestjs && npm run compile-testcommon_testjs && npm run compile-testschematestjs && npm run compile-testspec_helperjs && npm run compile-libadaptershttpjs && npm run compile-libadaptersriakjs && npm run compile-testcommonbatchjs && npm run compile-testincludetestjs && npm run compile-libadaptersneo4jjs && npm run compile-testdatatypetestjs && npm run compile-testdefaultstestjs && npm run compile-libadapterscradlejs && npm run compile-libadaptersmemoryjs && npm run compile-testrelationstestjs && npm run compile-testjugglingdbtestjs && npm run compile-testvalidationstestjs && npm run compile-testmanipulationtestjs && npm run compile-testbasicqueryingtestjs",
+        "compile": "npm run compile-1_script && npm run compile-2_script"
     },
-    {
-      "name": "Joseph Junker",
-      "email": "joseph.jnk@gmail.com"
+    "man": [
+        "./docs/man/jugglingdb.3",
+        "./docs/man/schema.3",
+        "./docs/man/model.3",
+        "./docs/man/hooks.3",
+        "./docs/man/validations.3",
+        "./docs/man/roadmap.3",
+        "./docs/man/changelog.3"
+    ],
+    "engines": [
+        "node >= 0.6"
+    ],
+    "devDependencies": {
+        "semicov": "*",
+        "should": "~3.0.1",
+        "mocha": "~1.8.2",
+        "jshint": "2.5.6",
+        "babel-cli": "latest",
+        "babel-core": "latest",
+        "babel-plugin-add-module-exports": "latest",
+        "babel-plugin-transform-es2015-modules-commonjs": "latest",
+        "babel-polyfill": "latest",
+        "babel-preset-env": "latest",
+        "babel-preset-es2015-without-strict": "latest"
     },
-    {
-      "name": "Henri Bergius",
-      "email": "henri.bergius@iki.fi"
+    "dependencies": {
+        "inflection": "=1.2.7",
+        "when": "3.7.3",
+        "should": "=6.0.3"
     },
-    {
-      "name": "redvulps",
-      "email": "fabopereira@gmail.com"
-    },
-    {
-      "name": "Felipe Sateler",
-      "email": "fsateler@gmail.com"
-    },
-    {
-      "name": "Amir M. Mahmoudi",
-      "email": "a@geeknux.com"
-    },
-    {
-      "name": "Justinas Stankevičius",
-      "email": "justinas@justinas.me"
-    },
-    {
-      "name": "Rick O'Toole",
-      "email": "patrick.n.otoole@gmail.com"
-    },
-    {
-      "name": "Nicholas Westlake",
-      "email": "nicholasredlin@gmail.com"
+    "jshintConfig": {
+        "proto": true
     }
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/1602/jugglingdb"
-  },
-  "main": "index.js",
-  "scripts": {
-    "test": "make test",
-    "prepublish": "make build"
-  },
-  "man": [
-    "./docs/man/jugglingdb.3",
-    "./docs/man/schema.3",
-    "./docs/man/model.3",
-    "./docs/man/hooks.3",
-    "./docs/man/validations.3",
-    "./docs/man/roadmap.3",
-    "./docs/man/changelog.3"
-  ],
-  "engines": [
-    "node >= 0.6"
-  ],
-  "devDependencies": {
-    "semicov": "*",
-    "should": "~3.0.1",
-    "mocha": "~1.8.2",
-    "jshint": "2.5.6"
-  },
-  "dependencies": {
-    "inflection": "=1.2.7",
-    "when": "3.7.3",
-    "should": "=6.0.3"
-  },
-  "jshintConfig": {
-    "proto": true
-  }
 }
